--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.mikebro.mc</groupId>
-  <artifactId>mc-dummy-dao</artifactId>
-  <name>mc-dummy-dao</name>
-  <packaging>jar</packaging>
-  <version>1.1.0-SNAPSHOT</version>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.mikebro.mc</groupId>
+	<artifactId>mc-dummy-dao</artifactId>
+	<name>mc-dummy-dao</name>
+	<packaging>jar</packaging>
+	<version>1.1.0</version>
 
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<mcDataVersion>1.1.0-SNAPSHOT</mcDataVersion>
+		<mcDataVersion>1.1.0</mcDataVersion>
 		<springVersion>5.3.15</springVersion>
 		<jacksonVersion>2.17.2</jacksonVersion>
 		<apacheLoggingVersion>2.17.1</apacheLoggingVersion>
