--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>mc-dummy-dao</artifactId>
 	<name>mc-dummy-dao</name>
 	<packaging>jar</packaging>
-	<version>1.1.3</version>
+	<version>1.1.4-SNAPSHOT</version>
 
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
